force-app/main/default/main/default/objects/Common_Lab_Tests__c/Common_Lab_Tests__c.object-meta.xml
<CustomObject>
    <label>Common Lab Test</label>
    <nameField>
        <label>Common Lab Tests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common Lab Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>