force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Patient_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_Registration_ID__c</fullName>
    <label>Patient Registration ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>