force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Patient_Report_Card__c.field-meta.xml
<CustomField>
    <fullName>Patient_Report_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Report Card</label>
    <referenceTo>Patient_Report_Card__c</referenceTo>
    <relationshipLabel>Common Lab Tests</relationshipLabel>
    <relationshipName>Common_Lab_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>