force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Result_of_Test_2__c.field-meta.xml
<CustomField>
    <fullName>Result_of_Test_2__c</fullName>
    <label>Result of Test 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>