force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Second_Test__c.field-meta.xml
<CustomField>
    <fullName>Second_Test__c</fullName>
    <label>Second Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>