force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Test_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1__c</fullName>
    <label>First Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>