force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Tests_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Tests_Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tests Amount Paid ??</label>
    <type>Checkbox</type>
</CustomField>