force-app/main/default/main/default/objects/Common_Lab_Tests__c/fields/Third_Test__c.field-meta.xml
<CustomField>
    <fullName>Third_Test__c</fullName>
    <label>Third Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>