force-app/main/default/main/default/objects/Common_Lab_Tests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_1__c</columns>
    <columns>Second_Test__c</columns>
    <columns>Third_Test__c</columns>
    <columns>Patient_Registration_ID__c</columns>
    <columns>Tests_Amount_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>